--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.28.0",
@@ -19,8 +22,9 @@
     "@trpc/server": "^10.18.0",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-camera-pro": "^1.2.2",
+    "react-dom": "^18.2.0",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
