--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-camera-pro": "^1.2.2",
     "react-dom": "^18.2.0",
+    "styled-components": "^5.3.9",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
