--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "formidable": "^2.1.1",
     "next": "^13.2.4",
+    "next-absolute-url": "^1.2.2",
     "next-auth": "^4.21.0",
     "react": "^18.2.0",
     "react-camera-pro": "^1.2.2",
