--- a/package.json
+++ b/package.json
@@ -16,21 +16,27 @@
     "@mui/material": "^5.12.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
-    "@tanstack/react-query": "^4.28.0",
-    "@trpc/client": "^10.18.0",
+    "@swc/helpers": "^0.5.0",
+    "@tanstack/react-query": "^4.29.1",
+    "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.18.0",
-    "@trpc/react-query": "^10.18.0",
-    "@trpc/server": "^10.18.0",
+    "@trpc/react-query": "^10.20.0",
+    "@trpc/server": "^10.20.0",
+    "html-to-react": "^1.5.1",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "react": "^18.2.0",
     "react-camera-pro": "^1.2.2",
     "react-dom": "^18.2.0",
+    "showdown": "^2.1.0",
     "styled-components": "^5.3.9",
     "superjson": "1.12.2",
+    "swc": "^1.0.11",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.50",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
